--- a/TRIMedit.html
+++ b/TRIMedit.html
@@ -10,9 +10,9 @@
 </style></head>
   <body style="font-size:10pt; color:#585858"><font face="Segoe UI,sans-serif">
   <img src="images/icon-TRIMredirect.png" height="16" width=16";>
-    Opening from TRIM...
+    Opening from TRIM (in edit mode)...
 <script>
-  window.location.href = "el://" + window.location.hash.substring(1) + "?db=A7&view";
+  window.location.href = "el://" + window.location.hash.substring(1) + "?db=A7&edit";
   function goBack() {
     window.history.back();
   }
