--- a/TRIMopen.html
+++ b/TRIMopen.html
@@ -2,14 +2,14 @@
 <html>
   <head><title>TRIM Redirection</title>
   <style>
-   img {margin-top: 16px; margin-left: 22px; margin-right: 5px; margin-bottom: -3px; animation: mymove 0.8s ease-in-out forwards 1;}
+   img {margin-top: 24px; margin-left: 28x; margin-right: 4px; margin-bottom: -5px; animation: mymove 0.8s ease-in-out forwards 1;}
    @keyframes mymove {
      0% {margin-left: 2px; margin-right: 12px; opacity: 0.5;}
      100% (margin-left: 22px; margin-right: 5px; opacity 1;}
    }
 </style></head>
   <body style="font-size:10pt; color:#585858"><font face="Segoe UI,sans-serif">
-  <img src="images/icon-TRIMredirect.png" height="16" width=16";>
+  <img src="images/icon-TRIMredirect.png" height="24" width=24";>
     Showing in TRIM...
 <script>
   window.location.href = "el://" + window.location.hash.substring(1) + "?db=A7&open";
