--- a/TRIMopen.html
+++ b/TRIMopen.html
@@ -2,7 +2,7 @@
 <html>
   <head><title>TRIM Redirection</title>
   <style>
-   img {margin-top: 24px; margin-left: 28x; margin-right: 4px; margin-bottom: -5px; animation: mymove 0.8s ease-in-out forwards 1;}
+   img {margin-top: 24px; margin-left: 28px; margin-right: 4px; margin-bottom: -5px; animation: mymove 0.8s ease-in-out forwards 1;}
    @keyframes mymove {
      0% {margin-left: 2px; margin-right: 30px; opacity: 0.5;}
      100% (margin-left: 28px; margin-right: 4px; opacity 1;}
