--- a/TRIMedit.html
+++ b/TRIMedit.html
@@ -8,7 +8,7 @@
      100% (margin-left: 28px; margin-right: 4px; opacity 1;}
    }
 </style></head>
-  <body style="font-size:10pt; color:#585858"><font face="Segoe UI,sans-serif">
+  <body style="font-size:10pt; color:#ffffff; background:#858c99"><font face="Segoe UI,sans-serif">
   <img src="images/icon-TRIMredirect.png" height="24" width=24";>
     Opening from TRIM (in edit mode)...
 <script>
