--- a/index.html
+++ b/index.html
@@ -2,10 +2,10 @@
 <html>
   <head><title>TRIM Redirection</title>
   <style>
-   img {margin-top: 24px; margin-left: 28px; margin-right: 4px; margin-bottom: -5px; animation: mymove 0.8s ease-in-out forwards 1;}
+   img {margin-top: 24px; margin-left: 28px; margin-right: 1px; margin-bottom: -6px; animation: mymove 0.7s ease-in-out forwards 1}
    @keyframes mymove {
-     0% {margin-left: 2px; margin-right: 30px; opacity: 0.5;}
-     100% (margin-left: 28px; margin-right: 4px; opacity 1;}
+     0% {margin-left: 1px; margin-right: 28px; opacity: 0.5}
+     100% {margin-left: 28px; margin-right: 1px; opacity: 1}
    }
 </style></head>
   <body style="font-size:10pt; color:#ffffff; background:#858c99"><font face="Segoe UI,sans-serif">
